#
# Makefile.am for certify/src
#
# $Id$
#

yncludedir = @yncludedir@/certify

client_DATA =			\
	certify.ycp

ynclude_DATA =			\
	helps.ycp		\
	ui.ycp			\
	ui_system.ycp		\
	ui_tests.ycp

config_DATA =			\
	certify.y2cc

desktop_DATA =			\
	certify.desktop

module_DATA =			\
	Certify.ycp

EXTRA_DIST = $(client_DATA) $(ynclude_DATA) $(config_DATA) $(module_DATA) $(desktop_DATA)
